--- a/mobile/src/main/res/layout/content_set_driving.xml
+++ b/mobile/src/main/res/layout/content_set_driving.xml
@@ -1,58 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:st="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@android:color/white"
-    android:orientation="vertical"
+    android:layout_height="match_parent"
     tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingTop="16dp"
-        android:text="驾驶界面"
-        android:textColor="@color/colorPrimary"
-        android:textSize="14sp" />
+        android:orientation="vertical">
 
-    <com.wow.carlauncher.common.view.SetView
-        android:id="@+id/sv_driving_type"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        st:summary="驾驶界面"
-        st:titleEx="驾驶界面"
-        st:type="buttonB" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:paddingTop="16dp"
+            android:text="驾驶界面"
+            android:textColor="@color/colorPrimary"
+            android:textSize="14sp" />
 
-    <View style="@style/Interval" />
+        <com.wow.carlauncher.common.view.SetView
+            android:id="@+id/sv_driving_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            st:summary="驾驶界面"
+            st:titleEx="驾驶界面"
+            st:type="buttonB" />
 
-    <com.wow.carlauncher.common.view.SetView
-        android:id="@+id/sv_auto_to_driving"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        st:summary="@string/set_allow"
-        st:summary2="@string/set_ban"
-        st:titleEx="自动跳转到驾驶界面"
-        st:type="switchB" />
+        <View style="@style/Interval" />
 
-    <View style="@style/Interval" />
+        <com.wow.carlauncher.common.view.SetView
+            android:id="@+id/sv_auto_to_driving"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            st:summary="@string/set_allow"
+            st:summary2="@string/set_ban"
+            st:titleEx="自动跳转到驾驶界面"
+            st:type="switchB" />
 
-    <com.wow.carlauncher.common.view.SetView
-        android:id="@+id/sv_auto_to_driving_type"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        st:titleEx="驾驶界面跳转方式"
-        st:type="buttonB" />
+        <View style="@style/Interval" />
 
-    <View style="@style/Interval" />
+        <com.wow.carlauncher.common.view.SetView
+            android:id="@+id/sv_auto_to_driving_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            st:titleEx="驾驶界面跳转方式"
+            st:type="buttonB" />
 
-    <com.wow.carlauncher.common.view.SetView
-        android:id="@+id/sv_auto_to_driving_time"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        st:titleEx="跳转驾驶界面时间(秒)"
-        st:type="buttonB" />
+        <View style="@style/Interval" />
 
-    <View style="@style/Interval" />
-</LinearLayout>
+        <com.wow.carlauncher.common.view.SetView
+            android:id="@+id/sv_auto_to_driving_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            st:titleEx="跳转驾驶界面时间(秒)"
+            st:type="buttonB" />
+
+        <View style="@style/Interval" />
+    </LinearLayout>
+
+</ScrollView>
