--- a/mobile/src/main/res/layout/content_set_dev.xml
+++ b/mobile/src/main/res/layout/content_set_dev.xml
@@ -1,28 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:st="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@android:color/white"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    tools:ignore="HardcodedText,RtlSymmetry">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingTop="16dp"
-        android:text="OBD"
-        android:textColor="@color/colorPrimary"
-        android:textSize="14sp" />
+        android:orientation="vertical">
 
-    <com.wow.carlauncher.common.view.SetView
-        android:id="@+id/sv_bind"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        st:summary="测试绑定"
-        st:titleEx="OBD绑定"
-        st:type="buttonB" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:paddingTop="16dp"
+            android:text="OBD"
+            android:textColor="@color/colorPrimary"
+            android:textSize="14sp" />
 
-    <View style="@style/Interval" />
+        <com.wow.carlauncher.common.view.SetView
+            android:id="@+id/sv_bind"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            st:summary="测试绑定"
+            st:titleEx="OBD绑定"
+            st:type="buttonB" />
 
-</LinearLayout>
+        <View style="@style/Interval" />
+    </LinearLayout>
+</ScrollView>
