--- a/mobile/src/main/res/layout/content_set_load_app.xml
+++ b/mobile/src/main/res/layout/content_set_load_app.xml
@@ -1,84 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:st="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@android:color/white"
-    android:orientation="vertical"
+    android:layout_height="match_parent"
     tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingTop="16dp"
-        android:text="第三方加载(APP启动的时候,可加载第三方APP)"
-        android:textColor="@color/colorPrimary"
-        android:textSize="14sp" />
+        android:background="@android:color/white"
+        android:orientation="vertical">
 
-    <com.wow.carlauncher.common.view.SetView
-        android:id="@+id/sv_load_use"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        st:summary="@string/set_yes"
-        st:summary2="@string/set_no"
-        st:titleEx="是否使用第三方APP加载器"
-        st:type="switchB" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:paddingTop="16dp"
+            android:text="第三方加载(APP启动的时候,可加载第三方APP)"
+            android:textColor="@color/colorPrimary"
+            android:textSize="14sp" />
 
-    <View style="@style/Interval" />
+        <com.wow.carlauncher.common.view.SetView
+            android:id="@+id/sv_load_use"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            st:summary="@string/set_yes"
+            st:summary2="@string/set_no"
+            st:titleEx="是否使用第三方APP加载器"
+            st:type="switchB" />
 
-    <com.wow.carlauncher.common.view.SetView
-        android:id="@+id/sv_back_yanchi"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        st:titleEx="返回桌面的延迟"
-        st:type="buttonB" />
+        <View style="@style/Interval" />
 
-    <View style="@style/Interval" />
+        <com.wow.carlauncher.common.view.SetView
+            android:id="@+id/sv_back_yanchi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            st:titleEx="返回桌面的延迟"
+            st:type="buttonB" />
 
-    <com.wow.carlauncher.common.view.SetView
-        android:id="@+id/sv_clear"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        st:titleEx="清理打开的应用选项"
-        st:type="buttonB" />
+        <View style="@style/Interval" />
 
-    <View style="@style/Interval" />
+        <com.wow.carlauncher.common.view.SetView
+            android:id="@+id/sv_clear"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            st:titleEx="清理打开的应用选项"
+            st:type="buttonB" />
 
-    <com.wow.carlauncher.common.view.SetView
-        android:id="@+id/sv_open1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        st:titleEx="第一个被打开的APP"
-        st:type="buttonB" />
+        <View style="@style/Interval" />
 
-    <View style="@style/Interval" />
+        <com.wow.carlauncher.common.view.SetView
+            android:id="@+id/sv_open1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            st:titleEx="第一个被打开的APP"
+            st:type="buttonB" />
 
-    <com.wow.carlauncher.common.view.SetView
-        android:id="@+id/sv_open2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        st:titleEx="第二个被打开的APP"
-        st:type="buttonB" />
+        <View style="@style/Interval" />
 
-    <View style="@style/Interval" />
+        <com.wow.carlauncher.common.view.SetView
+            android:id="@+id/sv_open2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            st:titleEx="第二个被打开的APP"
+            st:type="buttonB" />
 
-    <com.wow.carlauncher.common.view.SetView
-        android:id="@+id/sv_open3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        st:titleEx="第三个被打开的APP"
-        st:type="buttonB" />
+        <View style="@style/Interval" />
 
-    <View style="@style/Interval" />
+        <com.wow.carlauncher.common.view.SetView
+            android:id="@+id/sv_open3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            st:titleEx="第三个被打开的APP"
+            st:type="buttonB" />
 
-    <com.wow.carlauncher.common.view.SetView
-        android:id="@+id/sv_open4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        st:titleEx="第四个被打开的APP"
-        st:type="buttonB" />
+        <View style="@style/Interval" />
 
-    <View style="@style/Interval" />
-</LinearLayout>
+        <com.wow.carlauncher.common.view.SetView
+            android:id="@+id/sv_open4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            st:titleEx="第四个被打开的APP"
+            st:type="buttonB" />
+
+        <View style="@style/Interval" />
+    </LinearLayout>
+</ScrollView>
