--- a/mobile/src/main/res/layout/content_set_obd.xml
+++ b/mobile/src/main/res/layout/content_set_obd.xml
@@ -1,45 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:st="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@android:color/white"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingTop="16dp"
-        android:text="OBD"
-        android:textColor="@color/colorPrimary"
-        android:textSize="14sp" />
+        android:orientation="vertical">
 
-    <com.wow.carlauncher.common.view.SetView
-        android:id="@+id/sv_obd_select"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        st:summary="没有绑定OBD"
-        st:titleEx="OBD绑定"
-        st:type="buttonB" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:paddingTop="16dp"
+            android:text="OBD"
+            android:textColor="@color/colorPrimary"
+            android:textSize="14sp" />
 
-    <View style="@style/Interval" />
+        <com.wow.carlauncher.common.view.SetView
+            android:id="@+id/sv_obd_select"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            st:summary="没有绑定OBD"
+            st:titleEx="OBD绑定"
+            st:type="buttonB" />
 
-    <com.wow.carlauncher.common.view.SetView
-        android:id="@+id/sv_obd_disconnect"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        st:titleEx="断开OBD"
-        st:type="buttonB" />
+        <View style="@style/Interval" />
 
-    <View style="@style/Interval" />
+        <com.wow.carlauncher.common.view.SetView
+            android:id="@+id/sv_obd_disconnect"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            st:titleEx="断开OBD"
+            st:type="buttonB" />
 
-    <com.wow.carlauncher.common.view.SetView
-        android:id="@+id/sv_obd_impl_select"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        st:titleEx="OBD协议"
-        st:type="buttonB" />
+        <View style="@style/Interval" />
 
-    <View style="@style/Interval" />
-</LinearLayout>
+        <com.wow.carlauncher.common.view.SetView
+            android:id="@+id/sv_obd_impl_select"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            st:titleEx="OBD协议"
+            st:type="buttonB" />
+
+        <View style="@style/Interval" />
+    </LinearLayout>
+</ScrollView>
